syntax="proto3";
option go_package = "hall/pb;pb";//指定生成的位置和package

message LoginParams{
  string account = 1;
  string password = 2;
  int32 loginPlatform = 3;
  string smsCode = 4;
}

message LoginResponse{
  string uid = 1;
}

service UserService{
  rpc Login(LoginParams) returns(LoginResponse);
}